added logging code from logging2 of RobotCode2019

--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     // Enable simulation gui support. Must check the box in vscode to enable support
     // upon debugging
     simulation wpi.deps.sim.gui(wpi.platforms.desktop, false)
+    compile group: 'org.apache.commons', name: 'commons-csv', version: '1.6'
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
