--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     // upon debugging
     simulation wpi.deps.sim.gui(wpi.platforms.desktop, false)
     compile group: 'org.apache.commons', name: 'commons-csv', version: '1.6'
+    compile 'org.mockito:mockito-core:3.2.4'
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
