--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
     - name: Checkout source
-    - uses: actions/checkout@v2
+      uses: actions/checkout@v2
       with:
         submodules: 'recursive'
         fetch-depth: 0
