--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,7 @@
 			// Options
 			"INSTALL_MAVEN": "false",
 			"INSTALL_GRADLE": "false",
-			"NODE_VERSION": "lts/*"
+			"NODE_VERSION": "none"
 		}
 	},
 
@@ -21,8 +21,8 @@
 	
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
-		"vscjava.vscode-java-pack",
 		"redhat.java",
+		"vscjava.vscode-java-pack",
 		"ms-vscode.cpptools",
 		"vcjava.vscode-java-debug",
 		"ms-toolsai.jupyter",
